Fixed bugs with border on ios

--- a/public/css/reviews.css
+++ b/public/css/reviews.css
@@ -778,6 +778,7 @@ input[type="file"] {
     border-color: #2f5496;
 }
 .comment {
+    position: relative;
     display: none;
     width: 100%;
     text-align: start;
@@ -787,11 +788,23 @@ input[type="file"] {
     -webkit-box-align: stretch;
     -ms-flex-align: stretch;
     align-items: stretch;
-    border-bottom: 1px groove #4a92f8;
-    -o-border-image: -o-linear-gradient(left, rgba(242, 242, 242, 0.56), #2f5496, #2f5496, #f2f2f2) 47% 0%;
-    border-image: -webkit-gradient(linear, left top, right top, from(rgba(242, 242, 242, 0.56)), color-stop(#2f5496), color-stop(#2f5496), to(#f2f2f2)) 47% 0%;
-    border-image: linear-gradient(to right, rgba(242, 242, 242, 0.56), #2f5496, #2f5496, #f2f2f2) 47% 0%;
+    /*border-bottom: 1px groove #4a92f8;*/
+    /*-o-border-image: -o-linear-gradient(left, rgba(242, 242, 242, 0.56), #2f5496, #2f5496, #f2f2f2) 47% 0%;*/
+    /*border-image: -webkit-gradient(linear, left top, right top, from(rgba(242, 242, 242, 0.56)), color-stop(#2f5496), color-stop(#2f5496), to(#f2f2f2)) 47% 0%;*/
+    /*border-image: linear-gradient(to right, rgba(242, 242, 242, 0.56), #2f5496, #2f5496, #f2f2f2) 47% 0%;*/
     margin-bottom: 10px;
+}
+
+.comment:after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background: -webkit-gradient(linear, left top, right top, from(rgba(242, 242, 242, .56)), color-stop(#2f5496), color-stop(#2f5496), to(#f2f2f2)) 47% 0;
+    background: -o-linear-gradient(left, rgba(242, 242, 242, .56), #2f5496, #2f5496, #f2f2f2) 47% 0;
+    background: linear-gradient(to right, rgba(242, 242, 242, .56), #2f5496, #2f5496, #f2f2f2) 47% 0;
 }
 .complain {
     display: none;
